nimble/NimbleParser.py
# Generated from /Users/phillips/Sync/courses/EEE340/code/lab 3 start/Nimble.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class NimbleParser ( Parser ):

    grammarFileName = "Nimble.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'func'", "'('", "','", "')'", "'->'", 
                     "'{'", "'}'", "':'", "'var'", "'='", "'while'", "'if'", 
                     "'else'", "'print'", "'return'", "'!'", "'-'", "'*'", 
                     "'/'", "'+'", "'<'", "'<='", "'=='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "STRING", "INT", "TYPE", "BOOL", "ID", "WS", "COMMENT" ]

    RULE_script = 0
    RULE_funcDef = 1
    RULE_parameterDef = 2
    RULE_main = 3
    RULE_body = 4
    RULE_varBlock = 5
    RULE_block = 6
    RULE_varDec = 7
    RULE_statement = 8
    RULE_expr = 9
    RULE_funcCall = 10

    ruleNames =  [ "script", "funcDef", "parameterDef", "main", "body", 
                   "varBlock", "block", "varDec", "statement", "expr", "funcCall" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    STRING=24
    INT=25
    TYPE=26
    BOOL=27
    ID=28
    WS=29
    COMMENT=30

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ScriptContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def main(self):
            return self.getTypedRuleContext(NimbleParser.MainContext,0)


        def EOF(self):
            return self.getToken(NimbleParser.EOF, 0)

        def funcDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NimbleParser.FuncDefContext)
            else:
                return self.getTypedRuleContext(NimbleParser.FuncDefContext,i)


        def getRuleIndex(self):
            return NimbleParser.RULE_script

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScript" ):
                listener.enterScript(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScript" ):
                listener.exitScript(self)




    def script(self):

        localctx = NimbleParser.ScriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_script)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 25
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 22
                self.funcDef()
                self.state = 27
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 28
            self.main()
            self.state = 29
            self.match(NimbleParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(NimbleParser.ID, 0)

        def body(self):
            return self.getTypedRuleContext(NimbleParser.BodyContext,0)


        def parameterDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NimbleParser.ParameterDefContext)
            else:
                return self.getTypedRuleContext(NimbleParser.ParameterDefContext,i)


        def TYPE(self):
            return self.getToken(NimbleParser.TYPE, 0)

        def getRuleIndex(self):
            return NimbleParser.RULE_funcDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDef" ):
                listener.enterFuncDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDef" ):
                listener.exitFuncDef(self)




    def funcDef(self):

        localctx = NimbleParser.FuncDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_funcDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self.match(NimbleParser.T__0)
            self.state = 32
            self.match(NimbleParser.ID)
            self.state = 33
            self.match(NimbleParser.T__1)
            self.state = 42
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==28:
                self.state = 34
                self.parameterDef()
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==3:
                    self.state = 35
                    self.match(NimbleParser.T__2)
                    self.state = 36
                    self.parameterDef()
                    self.state = 41
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 44
            self.match(NimbleParser.T__3)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 45
                self.match(NimbleParser.T__4)
                self.state = 46
                self.match(NimbleParser.TYPE)


            self.state = 49
            self.match(NimbleParser.T__5)
            self.state = 50
            self.body()
            self.state = 51
            self.match(NimbleParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(NimbleParser.ID, 0)

        def TYPE(self):
            return self.getToken(NimbleParser.TYPE, 0)

        def getRuleIndex(self):
            return NimbleParser.RULE_parameterDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterDef" ):
                listener.enterParameterDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterDef" ):
                listener.exitParameterDef(self)




    def parameterDef(self):

        localctx = NimbleParser.ParameterDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_parameterDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(NimbleParser.ID)
            self.state = 54
            self.match(NimbleParser.T__7)
            self.state = 55
            self.match(NimbleParser.TYPE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body(self):
            return self.getTypedRuleContext(NimbleParser.BodyContext,0)


        def getRuleIndex(self):
            return NimbleParser.RULE_main

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain" ):
                listener.enterMain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain" ):
                listener.exitMain(self)




    def main(self):

        localctx = NimbleParser.MainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_main)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varBlock(self):
            return self.getTypedRuleContext(NimbleParser.VarBlockContext,0)


        def block(self):
            return self.getTypedRuleContext(NimbleParser.BlockContext,0)


        def getRuleIndex(self):
            return NimbleParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)




    def body(self):

        localctx = NimbleParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.varBlock()
            self.state = 60
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NimbleParser.VarDecContext)
            else:
                return self.getTypedRuleContext(NimbleParser.VarDecContext,i)


        def getRuleIndex(self):
            return NimbleParser.RULE_varBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarBlock" ):
                listener.enterVarBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarBlock" ):
                listener.exitVarBlock(self)




    def varBlock(self):

        localctx = NimbleParser.VarBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_varBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9:
                self.state = 62
                self.varDec()
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NimbleParser.StatementContext)
            else:
                return self.getTypedRuleContext(NimbleParser.StatementContext,i)


        def getRuleIndex(self):
            return NimbleParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = NimbleParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 268490752) != 0:
                self.state = 68
                self.statement()
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(NimbleParser.ID, 0)

        def TYPE(self):
            return self.getToken(NimbleParser.TYPE, 0)

        def expr(self):
            return self.getTypedRuleContext(NimbleParser.ExprContext,0)


        def getRuleIndex(self):
            return NimbleParser.RULE_varDec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDec" ):
                listener.enterVarDec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDec" ):
                listener.exitVarDec(self)




    def varDec(self):

        localctx = NimbleParser.VarDecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_varDec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(NimbleParser.T__8)
            self.state = 75
            self.match(NimbleParser.ID)
            self.state = 76
            self.match(NimbleParser.T__7)
            self.state = 77
            self.match(NimbleParser.TYPE)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 78
                self.match(NimbleParser.T__9)
                self.state = 79
                self.expr(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return NimbleParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class PrintContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a NimbleParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(NimbleParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint" ):
                listener.enterPrint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint" ):
                listener.exitPrint(self)


    class AssignmentContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a NimbleParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(NimbleParser.ID, 0)
        def expr(self):
            return self.getTypedRuleContext(NimbleParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)


    class FuncCallStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a NimbleParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def funcCall(self):
            return self.getTypedRuleContext(NimbleParser.FuncCallContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncCallStmt" ):
                listener.enterFuncCallStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncCallStmt" ):
                listener.exitFuncCallStmt(self)


    class WhileContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a NimbleParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(NimbleParser.ExprContext,0)

        def block(self):
            return self.getTypedRuleContext(NimbleParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile" ):
                listener.enterWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile" ):
                listener.exitWhile(self)


    class IfContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a NimbleParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(NimbleParser.ExprContext,0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NimbleParser.BlockContext)
            else:
                return self.getTypedRuleContext(NimbleParser.BlockContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf" ):
                listener.enterIf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf" ):
                listener.exitIf(self)


    class ReturnContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a NimbleParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(NimbleParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn" ):
                listener.enterReturn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn" ):
                listener.exitReturn(self)



    def statement(self):

        localctx = NimbleParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                localctx = NimbleParser.AssignmentContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.match(NimbleParser.ID)
                self.state = 83
                self.match(NimbleParser.T__9)
                self.state = 84
                self.expr(0)
                pass

            elif la_ == 2:
                localctx = NimbleParser.WhileContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.match(NimbleParser.T__10)
                self.state = 86
                self.expr(0)
                self.state = 87
                self.match(NimbleParser.T__5)
                self.state = 88
                self.block()
                self.state = 89
                self.match(NimbleParser.T__6)
                pass

            elif la_ == 3:
                localctx = NimbleParser.IfContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 91
                self.match(NimbleParser.T__11)
                self.state = 92
                self.expr(0)
                self.state = 93
                self.match(NimbleParser.T__5)
                self.state = 94
                self.block()
                self.state = 95
                self.match(NimbleParser.T__6)
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==13:
                    self.state = 96
                    self.match(NimbleParser.T__12)
                    self.state = 97
                    self.match(NimbleParser.T__5)
                    self.state = 98
                    self.block()
                    self.state = 99
                    self.match(NimbleParser.T__6)


                pass

            elif la_ == 4:
                localctx = NimbleParser.PrintContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 103
                self.match(NimbleParser.T__13)
                self.state = 104
                self.expr(0)
                pass

            elif la_ == 5:
                localctx = NimbleParser.ReturnContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 105
                self.match(NimbleParser.T__14)
                self.state = 107
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                if la_ == 1:
                    self.state = 106
                    self.expr(0)


                pass

            elif la_ == 6:
                localctx = NimbleParser.FuncCallStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 109
                self.funcCall()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return NimbleParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class NegContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a NimbleParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(NimbleParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNeg" ):
                listener.enterNeg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNeg" ):
                listener.exitNeg(self)


    class ParensContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a NimbleParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(NimbleParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParens" ):
                listener.enterParens(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParens" ):
                listener.exitParens(self)


    class CompareContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a NimbleParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NimbleParser.ExprContext)
            else:
                return self.getTypedRuleContext(NimbleParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompare" ):
                listener.enterCompare(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompare" ):
                listener.exitCompare(self)


    class StringLiteralContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a NimbleParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(NimbleParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringLiteral" ):
                listener.enterStringLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringLiteral" ):
                listener.exitStringLiteral(self)


    class VariableContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a NimbleParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(NimbleParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable" ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable" ):
                listener.exitVariable(self)


    class IntLiteralContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a NimbleParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(NimbleParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntLiteral" ):
                listener.enterIntLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntLiteral" ):
                listener.exitIntLiteral(self)


    class AddSubContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a NimbleParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NimbleParser.ExprContext)
            else:
                return self.getTypedRuleContext(NimbleParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddSub" ):
                listener.enterAddSub(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddSub" ):
                listener.exitAddSub(self)


    class FuncCallExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a NimbleParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def funcCall(self):
            return self.getTypedRuleContext(NimbleParser.FuncCallContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncCallExpr" ):
                listener.enterFuncCallExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncCallExpr" ):
                listener.exitFuncCallExpr(self)


    class BoolLiteralContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a NimbleParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BOOL(self):
            return self.getToken(NimbleParser.BOOL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolLiteral" ):
                listener.enterBoolLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolLiteral" ):
                listener.exitBoolLiteral(self)


    class MulDivContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a NimbleParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NimbleParser.ExprContext)
            else:
                return self.getTypedRuleContext(NimbleParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMulDiv" ):
                listener.enterMulDiv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMulDiv" ):
                listener.exitMulDiv(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = NimbleParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                localctx = NimbleParser.ParensContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 113
                self.match(NimbleParser.T__1)
                self.state = 114
                self.expr(0)
                self.state = 115
                self.match(NimbleParser.T__3)
                pass

            elif la_ == 2:
                localctx = NimbleParser.NegContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 117
                localctx.op = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==16 or _la==17):
                    localctx.op = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 118
                self.expr(9)
                pass

            elif la_ == 3:
                localctx = NimbleParser.FuncCallExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 119
                self.funcCall()
                pass

            elif la_ == 4:
                localctx = NimbleParser.VariableContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 120
                self.match(NimbleParser.ID)
                pass

            elif la_ == 5:
                localctx = NimbleParser.StringLiteralContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 121
                self.match(NimbleParser.STRING)
                pass

            elif la_ == 6:
                localctx = NimbleParser.IntLiteralContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 122
                self.match(NimbleParser.INT)
                pass

            elif la_ == 7:
                localctx = NimbleParser.BoolLiteralContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 123
                self.match(NimbleParser.BOOL)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 137
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 135
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
                    if la_ == 1:
                        localctx = NimbleParser.MulDivContext(self, NimbleParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 126
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 127
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==18 or _la==19):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 128
                        self.expr(9)
                        pass

                    elif la_ == 2:
                        localctx = NimbleParser.AddSubContext(self, NimbleParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 129
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 130
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==17 or _la==20):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 131
                        self.expr(8)
                        pass
